--- a/index.html
+++ b/index.html
@@ -54,29 +54,32 @@
 				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="ti-menu"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
+			<div class="collapse navbar-collapse" id="nav" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item dropdown dropdown-slide">
 						<a class="nav-link" href="../../index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="about-us.html">About Us
+						<a class="nav-link" href="about-us.html" data-toggle="dropdown">About Us
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
+							<a class="dropdown-item" href="about-us.html">About Us </a>
 							<a class="dropdown-item" href="our-history.html">Our History</a>
 							<a class="dropdown-item" href="community.html">Serving Community</a>
 							<a class="dropdown-item" href="associations.html">Associations</a>
 							<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+							<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="commercial-business.html">Commercial
+						<a class="nav-link" href="commercial-business.html" data-toggle="dropdown">Commercial
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
+							<a class="dropdown-item" href="commercial-business.html">Commercial</a>
 							<a class="dropdown-item" href="industrial-business.html">Industrial</a>
 							<a class="dropdown-item" href="education.html">Education</a>
 							<a class="dropdown-item" href="healthcare.html">Healthcare</a>
@@ -92,21 +95,23 @@
 						<a class="nav-link" href="home-security.html">Residential</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="home-security.html">Monitoring
+						<a class="nav-link" href="home-security.html" data-toggle="dropdown">Monitoring
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
+							<a class="dropdown-item" href="home-security.html">Monitoring</a>
 							<a class="dropdown-item" href="home-security.html">Residential</a>
 							<a class="dropdown-item" href="commercial.html">Commercial</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="government.html">Government
+						<a class="nav-link" href="government.html" data-toggle="dropdown">Government
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
+							<a class="dropdown-item" href="government.html">Government</a>
 							<a class="dropdown-item" href="solutions.html">Solutions</a>
 							<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
 							<a class="dropdown-item" href="school-districts.html">School Districts</a>
@@ -115,11 +120,12 @@
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="contact.html">Contact Us
+						<a class="nav-link" href="contact.html" data-toggle="dropdown">Contact Us
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
+							<a class="dropdown-item" href="contact.html">Contact Us</a>
 							<a class="dropdown-item" href="leadership.html">Leadership</a>
 							<a class="dropdown-item" href="sales-team.html">Sales Team</a>
 						</div>
@@ -194,6 +200,7 @@
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
+						<a class="dropdown-item" href="about-us.html">About Us</a>
 						<a class="dropdown-item" href="our-history.html">Our History</a>
 						<a class="dropdown-item" href="community.html">Serving Community</a>
 						<a class="dropdown-item" href="associations.html">Associations</a>
@@ -206,6 +213,7 @@
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
+						<a class="dropdown-item" href="commercial-business.html">Commercial</a>
 						<a class="dropdown-item" href="industrial-business.html">Industrial</a>
 						<a class="dropdown-item" href="education.html">Education</a>
 						<a class="dropdown-item" href="healthcare.html">Healthcare</a>
@@ -226,6 +234,7 @@
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
+						<a class="dropdown-item" href="home-security.html">Monitoring</a>
 						<a class="dropdown-item" href="home-security.html">Residential</a>
 						<a class="dropdown-item" href="commercial.html">Commercial</a>
 					</div>
@@ -236,6 +245,7 @@
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
+						<a class="dropdown-item" href="government.html">Government</a>
 						<a class="dropdown-item" href="solutions.html">Solutions</a>
 						<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
 						<a class="dropdown-item" href="school-districts.html">School Districts</a>
@@ -249,6 +259,7 @@
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
+						<a class="dropdown-item" href="contact.html">Contact Us</a>
 						<a class="dropdown-item" href="leadership.html">Leadership</a>
 						<a class="dropdown-item" href="sales-team.html">Sales Team</a>
 					</div>
@@ -369,14 +380,14 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="#">
+					<!-- <a href="#"> -->
 						<div class='img-container'>
 						<img src="images/DIY-3x2.jpg" alt="do it yourself security" />
 						<div class='img-footer'>
-							<p class="image-text">DIY</p>
+							<p class="image-text"></p>
 						</div>
 						</div>
-					</a>
+					<!-- </a> -->
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="government.html">
