--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<a class="nav-link" href="../../index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="about-us.html" data-toggle="dropdown">About Us
+						<a class="nav-link" href="#" data-toggle="dropdown">About Us
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
@@ -74,7 +74,7 @@
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="commercial-business.html" data-toggle="dropdown">Commercial
+						<a class="nav-link" href="#" data-toggle="dropdown">Commercial
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
@@ -95,7 +95,7 @@
 						<a class="nav-link" href="home-security.html">Residential</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="home-security.html" data-toggle="dropdown">Monitoring
+						<a class="nav-link" href="#" data-toggle="dropdown">Monitoring
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
@@ -106,7 +106,7 @@
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="government.html" data-toggle="dropdown">Government
+						<a class="nav-link" href="#" data-toggle="dropdown">Government
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
@@ -120,7 +120,7 @@
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="contact.html" data-toggle="dropdown">Contact Us
+						<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
@@ -195,7 +195,7 @@
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="about-us.html">About Us
+					<a class="nav-link" href="#">About Us
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
@@ -208,7 +208,7 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="commercial-business.html">Commercial
+					<a class="nav-link" href="#">Commercial
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
@@ -229,7 +229,7 @@
 					<a class="nav-link" href="home-security.html">Residential</a>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="home-security.html">Monitoring
+					<a class="nav-link" href="#">Monitoring
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
@@ -240,7 +240,7 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="government.html">Government
+					<a class="nav-link" href="#">Government
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
@@ -254,7 +254,7 @@
 					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="contact.html">Contact Us
+					<a class="nav-link" href="#">Contact Us
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
