--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="about-us.html" data-toggle="dropdown">About Us
+                    <a class="nav-link" href="#" data-toggle="dropdown">About Us
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -25,7 +25,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="commercial-business.html" data-toggle="dropdown">Commercial
+                    <a class="nav-link" href="#" data-toggle="dropdown">Commercial
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="home-security.html">Residential</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="home-security.html" data-toggle="dropdown">Monitoring
+                    <a class="nav-link" href="#" data-toggle="dropdown">Monitoring
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -57,7 +57,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="government.html" data-toggle="dropdown">Government
+                    <a class="nav-link" href="#" data-toggle="dropdown">Government
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="contact.html" data-toggle="dropdown">Contact Us
+                    <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
@@ -146,7 +146,7 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="about-us.html">About Us
+                <a class="nav-link" href="#">About Us
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
@@ -159,7 +159,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="commercial-business.html">Commercial
+                <a class="nav-link" href="#">Commercial
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
@@ -180,7 +180,7 @@
                 <a class="nav-link" href="home-security.html">Residential</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="home-security.html">Monitoring
+                <a class="nav-link" href="#">Monitoring
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
@@ -191,7 +191,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="government.html">Government
+                <a class="nav-link" href="#">Government
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
@@ -205,7 +205,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="contact.html">Contact Us
+                <a class="nav-link" href="#">Contact Us
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
